--- a/app/views/pages/biblio_temp.html.erb
+++ b/app/views/pages/biblio_temp.html.erb
@@ -16,7 +16,7 @@
 	<div class="row">
 
 	<div class="1"></div>
-		
+
 	</div>
 
 	<div class="row">
@@ -46,7 +46,7 @@
 
 		<div class="bibl-section">
 
-			<h2 class="biblio">&#10081; Reference works</h2> 
+			<h2 class="biblio">&#10081; Reference works</h2>
 
 			<p class="biblio">(In <b>BOLD</b> are standard abbreviations used in the field for reference, though entries are listed by authors' or editors' last names, by US MLA 8th edition conventions)</p>
 
@@ -119,22 +119,18 @@
 					<li class="biblio">Holtus, Günter, ed. <cite>La Versione franco-italiana della ‘Bataille d’Aliscans’: Codex Marcianus fr. VIII (=252)</cite>. Niemeyer, 1985. Beihefte zur Zeitschrift für romanische Philologie 205.</li>
 					<li class="biblio">Holtus, Günter, and Peter Wunderli. <cite>Les Épopées Romanes</cite>. Dir. Rita Lejeune, Jeanne Wathelet-Willem, Henning Krauss. Tome 1 / 2, Fascicule 10. Grundriss der romanischen Literaturen des Mittelalters 10. Franco-italien et épopée franco-italienne. Winter, 2005.</li>
 					<li class="biblio">Krauss, Henning. <cite>Epica feudale e pubblico borghese. Per la storia poetica di Carlomagno in Italia</cite>. Trans. Andrea Fassò. Liviana Editrice, 1980.</li>
-					<li class="biblio">Ludovisi, Idido. <cite>L'Ugo d'Alvernia secondo il codice franco-italiano della biblioteca vescovile di Padova</cite>. Mele, 1895.</li>
+          <li class="biblio">Landow, George P. <cite>Hypertext: The Convergence of Contemporary Critical Theory and Technology.</cite> Johns Hopkins University Press, 1992.<li>
+          <li class="biblio">Ludovisi, Idido. <cite>L'Ugo d'Alvernia secondo il codice franco-italiano della biblioteca vescovile di Padova</cite>. Mele, 1895.</li>
 					<li class="biblio">Mainone, Friedrich. <cite>Formenlehre und Syntax in der Berliner franco-venezianischen Chanson de geste von Huon d'Auvergne</cite>. Verlag Robert Noske, Borna Bez, 1936.</li>
 					<li class="biblio">Mainone, Friedrich. <cite>Laut- und Formenlehre in der Berliner franco-venezianischen Chanson de geste von Huon d'Auvergne</cite>. Erster Teil: Reimprüfung und Lautlehre. Inaugural-Dissertation zur Erlangung der Doktorwürde. Berlin: Universitäts Buchdruckerei von Gustav Schade, 1911.</li>
 					<li class="biblio">Martin da Canal. <cite>Les estoires de Venise: cronaca veneziana in lingua francese dalle origini al 1275</cite>. Ed. Alberto Limentani. Florence: L.S. Olschki, 1972.</li>
 					<li class="biblio">McCormick, Stephen P. "The ‘Franco-Italian’ Epic in Medieval Lombardia." Diss. U of Oregon, 2011.</li>
 					<li class="biblio">McCormick, Stephen P. <cite>The Manuscript Tradition and Reception of the Huon d’Auvergne, a Franco-Italian romance-epic</cite>. The French of Italy.</li>
 					<li class="biblio">McCormick, Stephen P. "Peregrinatio animae: Cartographic Spaces and Epistemological Debates in the Franco-Italian Huon d'Auvergne." <cite>Francigena</cite> 3 (2017): 79-109.</li>
-					<li class="biblio">McCormick, Stephen P. "Les humanités numériques et la tradition manuscrite de Huon d'Auvergne." <cite>Actes du XXème Congrès
-					International de la Société Rencesvals pour l'Étude des Épopées Romanes (Rome, Università di Roma- La
-					Sapienzia, 20-24 juillet 2015)</cite>. Eds. Maria Careri, Caterina Menichetti, and Maria Teresa Rachetta. Naples: Viella, 2017, pp. 571-78.</li>
-					<li class="biblio">McCormick, Stephen P. "A Contextual Analysis of Two Franco-Italian Manuscripts of the Huon d'Auvergne Romance Epic."
-					<cite>Digital Philology</cite> 5.2 (2016): 208-27.</li>
-					<li class="biblio">McCormick, Stephen P. "Como fa la foja: Versions of Female Authority in the Huon d'Auvergne Manuscript Tradition." <cite>Italian
-					Studies</cite> 70.1 (2015): 33-52.</li>
-					<li class="biblio">McCormick, Stephen P. “Cartography and Epic in Florentine Humanism and Andrea da Barberino’s Ugone d’Alvernia.” <cite>Viator</cite>
-					45.3 (2014): 339-62.</li>
+					<li class="biblio">McCormick, Stephen P. "Les humanités numériques et la tradition manuscrite de Huon d'Auvergne." <cite>Actes du XXème Congrès International de la Société Rencesvals pour l'Étude des Épopées Romanes (Rome, Università di Roma- La Sapienzia, 20-24 juillet 2015)</cite>. Eds. Maria Careri, Caterina Menichetti, and Maria Teresa Rachetta. Naples: Viella, 2017, pp. 571-78.</li>
+					<li class="biblio">McCormick, Stephen P. "A Contextual Analysis of Two Franco-Italian Manuscripts of the Huon d'Auvergne Romance Epic." <cite>Digital Philology</cite> 5.2 (2016): 208-27.</li>
+					<li class="biblio">McCormick, Stephen P. "Como fa la foja: Versions of Female Authority in the Huon d'Auvergne Manuscript Tradition." <cite>Italian Studies</cite> 70.1 (2015): 33-52.</li>
+					<li class="biblio">McCormick, Stephen P. “Cartography and Epic in Florentine Humanism and Andrea da Barberino’s Ugone d’Alvernia.” <cite>Viator</cite> 45.3 (2014): 339-62.</li>
 					<li class="biblio">Meregazzi, Luisa A. "L'episodio del Prete Gianni nell'Ugo d'Alvernia." <cite>Studi romanzi</cite> 26 (1935): 5-69.</li>
 					<li class="biblio">Meregazzi, Luisa A. "L'Ugo d'Alvernia: Poema Franco-Italiano." <cite>Studi romanzi</cite> 27 (1937): 5-87.</li>
 					<li class="biblio">Millardet, G. "Rev: F. Mainone, Laut- und Formenlehre in der Berliner franco-venezianischen Chanson de geste von Huon d'Auvergne. Erster Teil: Reimprüfung und Lautlehre. Inaugural-Dissertation zur Erlangung der Doktorwürde. Berlin: Universitäts Buchdruckerei von Gustav Schade, 1911." <cite>Revue des langues modernes</cite> 55 (1912): 125-128.</li>
@@ -158,6 +154,7 @@
 					<li class="biblio">Rajna, Pio. Transcription of Padua Biblioteca del Seminario Vescovile Cod. 32 Biblioteca Marucelliana, Florence, Carte Rajna XII.M.101. Sala consultazione manoscritti e rari.</li>
 					<li class="biblio">Rajna, Pio. Transcription of Torino N.III.19. Biblioteca Marucelliana, Florence, Carte Rajna XIX.15. Sala consultazione manoscritti e rari.</li>
 					<li class="biblio">Renier, Rodolfo, ed. <cite>La Discesa di Ugo d'Alvernia allo inferno secondo il codice franco-italiano della Nazionale di Torino</cite>. Gaetano Romagnoli, 1883.</li>
+          <li class="biblio">Siemens, Ray, et al. <cite>“Toward modeling the social edition: An approach to understanding the electronic scholarly edition in the context of new and emerging social media.”</cite> Literary and Linguistic Computing 27.4 (2012): 445-461.</li>
 					<li class="biblio">Scattolini, Michela. "Interpretazioni delle varianti e dinamiche della tradizione: l'episodio della discesa all'inferno nell'Huon d'Auvergne." In <cite>Codici, testi, interpretazioni: studi dell'epica romanza medievale.</cite>Ed. Paolo di Luca and Doriana Piacentino. Naples: Photocity Edizioni University Press, 2015. 141-60.</li>
 					<li class="biblio">Scattolini, Michela G. "Ricerche sulla tradizione dell’Huon d’Auvergne." Diss. Siena Scuola di dottorato europea in filologia romanza, 2010.</li>
 					<li class="biblio">Schwam-Baird, Shira. "La Résistance d'Ynide dans l'épopée franco-italienne Huon d'Auvergne : femme exceptionnelle / femme admirable?" «Par deviers Rome m’en renvenrai errant»: <cite>Atti del XXème Congrès International de la Société Rencesvals pour l'étude des épopées romanes</cite>. Eds. Maria Careri, Caterina Menichetti et Maria Teresa Rachetta. Rome: Viella, 2017. 637-646.</li>
@@ -184,6 +181,7 @@
 					<li class="biblio">Vallecalle, Jean-Claude. "Les chansons de geste franco-italiennes: héritage et réinterprétation d'une tradition littéraire." In <cite>Limine Romaniae. Chanson de geste et épopée européene</cite>. Ed. Carlos Alvar et Constance Carta. Lang, 2012. 61-90.</li>
 					<li class="biblio">Vitale-Brovarone, Alessandro. "De la chanson de Huon d'Auvergne à la Storia di Ugone d'Avernia d'Andrea da Barberino: techniques et méthodes de la traduction et de l'élaboration." <cite>Charlemagne et l'épopée romane. Actes du VIIe Congrès international de la Société Rencesvals</cite> (Liège 28 août - 4 septembre 1976). Ed. Madeleine Tyssens and Claude Thiry. Les Belles lettres, 1978. 2:393-403.</li>
 					<li class="biblio">Vitullo, Juliann M. <cite>The Chivalric Epic in Medieval Italy</cite>. U. Press of Florida, 2000.</li>
+          <li class="biblio">Warren, Michelle R. “Philology in Ruins,” <cite>Floriligium</cite> 32, 2015: 59-76.</li>
 			</ol>
 
 		</div>
