--- a/app/views/pages/biblio_temp.html.erb
+++ b/app/views/pages/biblio_temp.html.erb
@@ -101,7 +101,8 @@
 					<li class="biblio">Bennett, Philip. "Guillaume d'Orange: Fighter of Demons and Harrower of Hell." <cite>Myth and Legend in French Literature. Essays in Honour of A. J. Steele</cite>. Ed. Keith Aspley, David Bellos, Peter Sharratt. The Modern Humanities Research Association, 1982. 24-46.</li>
 					<li class="biblio">Bernstein, Alan E. <cite>The Formation of Hell. Death and Retribution in the Ancient and Early Christian Worlds</cite>. Cornell, 1993.</li>
 					<li class="biblio">Bernstein, Alan E. <cite>Hell and Its Rivals. Death and Retribution among Christians, Jews, and Muslims in the Early Middle Ages</cite>. Cornell, 2017.</li>
-					<li class="biblio">Borroni, Fabia. <cite>Le Carte Rajna della Biblioteca Marucelliana. Catalogo e Bibliografia</cite>. Sansoni, 1956. [lists Rajna=s transcription of Torino ms.]</li>
+          <li class="biblio">Bloch, Howard, et al., eds. <cite>Rethinking the New Medievalism.</cite> Baltimore: Johns Hopkins University Press, 2014.</li>
+          <li class="biblio">Borroni, Fabia. <cite>Le Carte Rajna della Biblioteca Marucelliana. Catalogo e Bibliografia</cite>. Sansoni, 1956. [lists Rajna=s transcription of Torino ms.]</li>
 					<li class="biblio">Braghirolli, Willelmo, Gaston Paris, and Paul Meyer. "Inventaire des manuscrits en langue française possédés par Francesco Gonzaga I, capitaine de Mantoue, mort en 1407." <cite>Romania</cite> 9 (1880): 497-514.</li>
 					<li class="biblio">Breeze, Andrew. "Sir John Paston on 'Ser Hughe Lavernoys'." <cite>Notes and Queries</cite> 48 (2001): 10-11.</li>
 					<li class="biblio">Dante Alighieri. <cite>Commedia</cite>. Ed. Robert M. Durling and Ronald L. Martinez. 3 vols. Oxford UP, 1996- 2003-2011.</li>
@@ -150,10 +151,12 @@
 					<li class="biblio">Morgan, Leslie Zarker. “The Passion of Ynide: Ynide's Defense in Huon d'Auvergne (Berlin, Staatsbibliothek, Hamilton 337) (I), (II).” <cite>Medioevo Romanzo</cite> 27 (2003): 67-85; 425-62.</li>
 					<li class="biblio">Morgan, Leslie Zarker.“Female enfances: At the Intersection of Romance and Epic.” In <cite>The Court Reconvenes: Courtly Literature Across the Disciplines. Selected Papers from the 9th Triennial Congress of the International Courtly Literature Society, University of British Columbia, Vancouver, 25-31 July 1998</cite>. Ed. C. W. Carroll and B. K. Altmann. Boydell and Brewer, 2003. 141-49.</li>
 					<li class="biblio">Morgan, Leslie Zarker. <cite>Franco-Italian and Italian Romance Epic</cite>. Co-editor with Nancy Bradley-Cromey. Special issue <cite>Olifant</cite> 21 (1996).</li>
-					<li class="biblio">Owen, D.D.R. <cite>The Vision of Hell: Infernal Journeys in Medieval French Literature</cite>. Barnes and Noble, 1970.</li>
+          <li class="biblio">Nichols, Stephen. "Introduction: Philology in a Manuscript Culture." <cite>Speculum</cite> 65.1 (1990): 1-10.</li>
+          <li class="biblio">Owen, D.D.R. <cite>The Vision of Hell: Infernal Journeys in Medieval French Literature</cite>. Barnes and Noble, 1970.</li>
 					<li class="biblio">Rajna, Pio. Transcription of Padua Biblioteca del Seminario Vescovile Cod. 32 Biblioteca Marucelliana, Florence, Carte Rajna XII.M.101. Sala consultazione manoscritti e rari.</li>
 					<li class="biblio">Rajna, Pio. Transcription of Torino N.III.19. Biblioteca Marucelliana, Florence, Carte Rajna XIX.15. Sala consultazione manoscritti e rari.</li>
 					<li class="biblio">Renier, Rodolfo, ed. <cite>La Discesa di Ugo d'Alvernia allo inferno secondo il codice franco-italiano della Nazionale di Torino</cite>. Gaetano Romagnoli, 1883.</li>
+          <li class="biblio">Sahle, Peter. "About." <cite>A Catalogue of Digital Scholarly Editions</cite>, http://www.digitale-edition.de/vlet-about.html. Accessed 13 January 2018.</li>
           <li class="biblio">Siemens, Ray, et al. <cite>“Toward modeling the social edition: An approach to understanding the electronic scholarly edition in the context of new and emerging social media.”</cite> Literary and Linguistic Computing 27.4 (2012): 445-461.</li>
 					<li class="biblio">Scattolini, Michela. "Interpretazioni delle varianti e dinamiche della tradizione: l'episodio della discesa all'inferno nell'Huon d'Auvergne." In <cite>Codici, testi, interpretazioni: studi dell'epica romanza medievale.</cite>Ed. Paolo di Luca and Doriana Piacentino. Naples: Photocity Edizioni University Press, 2015. 141-60.</li>
 					<li class="biblio">Scattolini, Michela G. "Ricerche sulla tradizione dell’Huon d’Auvergne." Diss. Siena Scuola di dottorato europea in filologia romanza, 2010.</li>
