--- a/app/views/pages/b_praxis.html.erb
+++ b/app/views/pages/b_praxis.html.erb
@@ -495,7 +495,7 @@
   <h2 class="praxis">&#10081; 5. Separation of words</h2>
 
         <!--
-        <p>We follow standard practice for separation of words in early texts. The separation of words in the MS is varying and not always logical.</p> 
+        <p>We follow standard practice for separation of words in early texts. The separation of words in the MS is varying and not always logical.</p>
 
               <ul class="praxis">
                 <li class="praxis">We join –ment/-mant to the adjective for adverbs.</li>
@@ -544,7 +544,7 @@ In editing the text, strong differences became clear between US practices and th
 • We have used US style quotes: double for primary speaker, single for quote within a quote. Quotes are normally announced by a comma; we have acceded to French tradition by using a comma within a line and a colon at the end of a line of verse.
 • Punctuation is within the quote marks, so a period is before the close quote. This is US format, which differs both from non-US English and from European usage.
 
-E.g.,   Huon said, "....Prester John said, '...'." 
+E.g.,   Huon said, "....Prester John said, '...'."
 
 • There is no punctuation  (comma, colon or quote) when "that" precedes an indirect quote.
 
@@ -561,4 +561,18 @@ Ynide accompanied Huon, her husband; Berart, Huon's cousin; Baudoin and Thomas, 
 </div>
 </div>
 </body>
+
+<div class="date-stamp">
+
+<script type="text/javascript">
+
+var m = "This page was last updated: " + document.lastModified;
+var p = m.length-8;
+
+document.body.appendChild(document.createElement("center")).innerText = "Version 1.0. Last modified: " + document.lastModified
+
+</script>
+
+</div>
+
 </html>
