--- a/app/views/layouts/_manuscript_introduction.html.erb
+++ b/app/views/layouts/_manuscript_introduction.html.erb
@@ -95,3 +95,12 @@
             </ol>
             </div>
             </div>
+
+            <script type="text/javascript">
+
+            var m = "This page was last updated: " + document.lastModified;
+            var p = m.length-8;
+
+            document.body.appendChild(document.createElement("center")).innerText = "Version 1.0. Last modified: " + document.lastModified
+
+            </script>
