--- a/app/views/pages/biblio_temp.html.erb
+++ b/app/views/pages/biblio_temp.html.erb
@@ -197,14 +197,21 @@
 
 	</div>
 
-	<div class="row">
-	<div class="12">
-		<%= render 'layouts/footer' %>
-	</div>
-	</div>
-
 </div>
 
 </body>
+
+<div class="date-stamp">
+
+<script type="text/javascript">
+
+var m = "This page was last updated: " + document.lastModified;
+var p = m.length-8;
+
+document.body.appendChild(document.createElement("center")).innerText = "Version 1.0. Last modified: " + document.lastModified
+
+</script>
+
+</div>
 
 </html>
