--- a/app/views/pages/p_praxis.html.erb
+++ b/app/views/pages/p_praxis.html.erb
@@ -267,6 +267,15 @@
 </div>
 </body>
 
+<script type="text/javascript">
+
+var m = "This page was last updated: " + document.lastModified;
+var p = m.length-8;
+
+document.body.appendChild(document.createElement("center")).innerText = "Version 1.0. Last modified: " + document.lastModified
+
+</script>
+
 </html>
 
 
