--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -5,7 +5,8 @@
             </div>
 
             <div id="version">
-              <%= link_to 'Edition Version 1.0', versioning_path() %>
+              <%= link_to 'Edition Version 1.0', versioning_path() %> <br/>
+              <%= link_to 'Cite our work', cite_path() %>
             </div>
 
             <div id="reader-nav-links">
