LZM and SSB updates to b, notes-b, translation-b; edits to footer and reading interface

--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -4,10 +4,16 @@
                     <%= @city %>, <%= @repository %> <%= @shelflisting %>
             </div>
 
-            <div id="version">
-              <%= link_to 'Edition Version 1.0', versioning_path() %> <br/>
-              <%= link_to 'Cite our work', cite_path() %>
-            </div>
+
+              <div class="dropdown">
+                Edition Legend
+              </div>
+
+              <div id="version">
+                <%= link_to 'Edition Version 1.0', versioning_path() %> <br/>
+                <%= link_to 'Cite our work', cite_path() %>
+              </div>
+
 
             <div id="reader-nav-links">
                 <%= t(page_entries_info(@line_groups))%>
@@ -69,6 +75,8 @@
     </div>
 </div>
 
+<div class="date-stamp">
+
 <script type="text/javascript">
 
 var m = "This page was last updated: " + document.lastModified;
@@ -77,3 +85,5 @@ var p = m.length-8;
 document.body.appendChild(document.createElement("center")).innerText = "Version 1.0. Last modified: " + document.lastModified
 
 </script>
+
+</div>
