add legend sidebar

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="site-nav-bar">
 
       <ul class="nav">
 
@@ -42,9 +42,7 @@
             <a class="nav" href="#"><%= link_to 'Cite our work', cite_path() %>
           </div>
         </li>
-      
+
       </ul>
 
 </div>
-
-
