--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -315,6 +315,9 @@ header {
 
 /* Top bar */
 
+div.site-nav-bar {
+	position:relative;
+}
 
 ul.nav {
     list-style-type: none;
@@ -1101,7 +1104,7 @@ ol.ms-toc {
 }
 
 span.translation_missing {
-	color: #a10d09;
+	color: #5f0000;
 }
 
 #selected_laisse {
@@ -1137,6 +1140,10 @@ span.translation_missing {
 	text-decoration: none;
 }
 
+#date-stamp {
+	float: right;
+}
+
 #diploCheckbox {
 	display: block;
 }
@@ -1169,7 +1176,7 @@ span.translation_missing {
 .line-heading {
 	margin: 0 0 1em 0;
 	font-size: 20pt;
-	color: #a10d09;
+	color: #5f0000;
 }
 
 .linenumber {
@@ -1198,6 +1205,19 @@ num {
 	font-size: 11pt;
 }
 
+.Rajna {
+	color: red;
+}
+
+q {
+	font-weight: bold;
+}
+
+q:before,
+q:after {
+ content: "";
+}
+
 seg {
 	font-style: italic;
 }
@@ -1207,10 +1227,100 @@ sic {
 	color: red;
 }
 
-.Rajna {
-	color: red;
+
+/* Edition and Translation Legend */
+
+/* OPTION 1
+.container {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  margin: 0 auto;
 }
 
+#legend-button, #close {
+  cursor: pointer;
+  display: block;
+  width: 100px;
+  margin: 0 10%;
+  padding: 10px 0;
+  background: #2d2d2a;
+  color: #fff;
+  border: 0;
+  text-align:center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+#legend-container {
+  display: none;
+  background: #2d2d2a;
+  color: #fff;
+  width: 200%;
+  min-height: 50px;
+  text-align: left;
+  padding: 15px;
+} */
+
+
+.legend {
+    height: 100%;
+    width: 0;
+    position: absolute;
+    z-index: 1;
+    top: 6.5%;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.legend a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.legend a:hover {
+    color: #f1f1f1;
+}
+
+.legend .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+#main {
+    transition: margin-left .5s;
+    padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+#legend-elements {
+	margin: 5%;
+	font: inherit;
+	color: whitesmoke;
+	list-style-type: none;
+}
+
+ul#legend {
+	list-style-type: none;
+}
+
+.note-contents {
+    color: whitesmoke;
+}
 
 /* wraps around TEI and MS image */
 
