--- a/app/assets/stylesheets/vmachine_styles.css
+++ b/app/assets/stylesheets/vmachine_styles.css
@@ -1926,6 +1926,7 @@ select {
     position: relative;
     right: 91.66667%;
     left: auto; } }
+/*
 button, .button {
   border-style: solid;
   border-width: 0;
@@ -2112,6 +2113,7 @@ button::-moz-focus-inner {
 @media only screen and (min-width: 40.063em) {
   button, .button {
     display: inline-block; } }
+    */
 /* Standard Forms */
 form {
   margin: 0 0 1rem; }
