--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -71,7 +71,7 @@
 <!-- Edition and Translation Legend -->
 
           <div id="main">
-            <span style="font-size:20px;cursor:pointer;color:#5f0000" onclick="openNav()">&#9776; Legend</span>
+            <span style="font-size:20px;cursor:pointer;color:#5f0000" onclick="openNav()">&#9776; Legend & Notes</span>
           </div>
 
           <div id="mySidenav" class="legend">
