--- a/lib/assets/00-biblio-and-praxis-pages/biblio_temp.html.erb
+++ b/lib/assets/00-biblio-and-praxis-pages/biblio_temp.html.erb
@@ -108,7 +108,8 @@
 					<li class="biblio">Dante Alighieri. <cite>Commedia</cite>. Ed. Robert M. Durling and Ronald L. Martinez. 3 vols. Oxford U P, 1996- 2003-2011.</li>
 					<li class="biblio">Dante Alighieri. <cite>Monarchia</cite>. Eng: On World Government. Trans. Herbert W. Schneider. Macmillan/Library of Liberal Arts, 1957.</li>
 					<li class="biblio">Debenedetti, Santorre. "Intorno al testo del frammento Barbieri dell'Ugone d'Alvernia." <cite>Archivum Romanicum</cite> 14 (1930): 269-73.</li>
-					<li class="biblio">Gardner, Eileen. <cite>Medieval Visions of Heaven and Hell</cite>. A Sourcebook. Garland, 1993.</li>
+          <li class="biblio">Di Stefano, Giuseppe. <cite>Nouveau dictionnaire historique des locutions</cite>. Ancien Français, Moyen Français, Renaissance. 2 vols. Brepols, 2015.</li>
+          <li class="biblio">Gardner, Eileen. <cite>Medieval Visions of Heaven and Hell</cite>. A Sourcebook. Garland, 1993.</li>
 					<li class="biblio">Giacon, Carla. "La redazione padovana dell'<cite>Huon d'Auvergne</cite>: Studio, Edizione, Glossario." Diss. Università degli studi, Padova. 1960-61.</li>
 					<li class="biblio">Everson, Jane E. <cite>The Italian Romance Epic in the Age of Humanism. The Matter of Italy and the World of Rome.</cite> Oxford: U P, 2001.</li>
 					<li class="biblio">Graf, A. “Di un poema inedito di Carlo Martello e di Ugo conte d'Alvernia.” Giornale di Filologia Romanza 1 (1878): 92-110.</li>
@@ -162,17 +163,10 @@
 					<li class="biblio">Scattolini, Michela G. "Ricerche sulla tradizione dell’Huon d’Auvergne." Diss. Siena Scuola di dottorato europea in filologia romanza, 2010.</li>
 					<li class="biblio">Schwam-Baird, Shira. "La Résistance d'Ynide dans l'épopée franco-italienne Huon d'Auvergne : femme exceptionnelle / femme admirable?" «Par deviers Rome m’en renvenrai errant»: <cite>Atti del XXème Congrès International de la Société Rencesvals pour l'étude des épopées romanes</cite>. Eds. Maria Careri, Caterina Menichetti et Maria Teresa Rachetta.Viella, 2017. 637-646.</li>
 					<li class="biblio">Schwam-Baird, Shira. "La longue vie de Valentin et Orson." <cite>Pour un nouveau répertoire des 'mises en prose' roman, chanson de geste, autres genres</cite>. Eds. Maria Colombo Timelli, Barbara Ferrari et Anne Schoysman. Classiques Garnier, 2014. 297-306.</li>
-					<li class="biblio">Schwam-Baird, Shira. "Translation in the Late Fifteenth Century: Octovien de Saint-Gelais's L'ystoire de Eurialus et Lucresse." <cite>Medieval Perspectives</cite> 26 (2011 [2012]), 77-88.</li>
 					<li class="biblio">Schwam-Baird, Shira, ed. <cite>Valentin et Orson: An Edition and Translation of the Fifteenth-Century Romance Epic</cite>. ACMRS (Arizona Center for Medieval and Renaissance Studies), 2011. 543 pp.</li>
-					<li class="biblio">Schwam-Baird, Shira. "The Letters of Lucretia and Euryalus in Text and Image: An Illuminated Manuscript of Aeneas Silvius Piccolomini's Story of Two Lovers." <cite>Medieval Perspectives</cite> 22 (2007 [2011]), 126-144.</li>
 					<li class="biblio">Schwam-Baird, Shira. "The Romance Epic Hero, the Mercenary, and the Ottoman Turk Seen through the Lens of Valentin et Orson (1489)." <cite>Medievalia et Humanistica</cite> 34 (2008), 105-127.</li>
 					<li class="biblio">Schwam-Baird, Shira. "A Husband to Her Liking: The Wily Saracen Queen Rozemonde in the 1489 Valentin et Orson." <cite>Olifant</cite> 26.1 (2007), 45-66.</li>
 					<li class="biblio">Schwam-Baird, Shira. "Terror and Laughter in the Images of the Wild Man: The Case of the 1489 Valentin et Orson." <cite>Fifteenth Century Studies</cite> 27 (2002), 238-256.</li>
-					<li class="biblio">Schwam-Baird, Shira. "King Arthur in Hollywood: The Subversion of Tragedy in First Knight." <cite>Medieval Perspectives</cite> 14 (1999), 202-213.</li>
-					<li class="biblio">Schwam-Baird, Shira. "Would a Courtly Gentleman Belt a Lady? Chastity Belts (and Knots) in Marie de France's Guigemar." <cite>Mediaevalia</cite> 22.2 (1999), 323-342.</li>
-					<li class="biblio">Schwam-Baird, Shira. "The Crucified Heart of René d'Anjou in Text and Image." <cite>Fifteenth Century Studies</cite> 25 (2000), 228-252.</li>
-					<li class="biblio">Schwam-Baird, Shira. "Sweet Dreams: The Pursuit of Youthful Love in Jean Froissart's Joli Buisson de Jonece and René d'Anjou's Livre du Cuer d'Amours Espris." <cite>Le Moyen Français</cite> 38 (1996), 45-60.</li>
-					<li class="biblio">Schwam-Baird, Shira, ed. <cite>Adam de la Halle: Le Jeu de Robin et Marion.</cite> Garland Publishing Inc., 1994. 153 pp.</li>
 					<li class="biblio">Stengel, Edmund. "Eine weitere Textstelle aus der franco-venezianischen Chanson de geste von Huon d'Auvergne. (Nach der Berliner und der Turiner Handschrift)." <cite>Festschrift zum 13. Neuphilologentage</cite>. C. Meyer, 1908. 35-49.</li>
 					<li class="biblio">Stengel, Edmund. "Huons von Auvergne Keuschheitsprobe, Episode aus der franco-venezianischen Chanson de geste von Huon d'Auvergne nach den drei erhaltenen Fassungen, der Berliner, Turiner und Paduaner." <cite>Mélanges... Wilmotte</cite>. Champion, 1910. 2: 685-713.</li>
 					<li class="biblio">Stengel, Edmund. "Karl Martels Entführung in die Hölle und Wilhem Capets Wahl zu seinem Nachfolger. Stelle aus der Chanson von Huon d'Auvergne (1) nach der Berliner Hs." <cite>Studi letterari e linguistici dedicati a Pio Rajna nel quarantesimo anno del suo insegnamento</cite>. Hoepli, 1911. 873- 91.</li>
